--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Package and release for Burning Crusade Classic
         uses: BigWigsMods/packager@v2
         with:
-          args: -g bcc -n "{package-name}-{project-version}"
+          args: -g wrath -p 605574 -n "{package-name}-{project-version}"
