--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,6 @@ jobs:
         with:
           fetch-depth: 0  # gets git history for changelogs
       - name: WoW Packager
-        uses: BigWigsMods/packager@v2.4.1
+        uses: BigWigsMods/packager@v2
         with:
-          args: -g cata -p 605574 -n "{package-name}-{project-version}"
+          args: -g mists -p 605574 -n "{package-name}-{project-version}"
